add .env for learning purposes

--- a/solution-lab-movies-celebrities/.gitignore
+++ b/solution-lab-movies-celebrities/.gitignore
@@ -5,7 +5,8 @@ node_modules
 npm-debug.log
 
 # Environment Variables should NEVER be published
-.env
+# Publishing it now for learning purposes
+# .env
 
 # added for maintainance purposes - not best  practice
 package-lock.json 
