add image upload and updating profile image

--- a/basic-auth-demo/.env
+++ b/basic-auth-demo/.env
@@ -1,3 +1,7 @@
 PORT=3000
 
 SESSION_SECRET = "PTWD is the best"
+
+CLOUD_NAME = djw7xkbip
+API_KEY = 522821966749615
+API_SECRET = FoUmvnSTqtaBf7DxyyNad6vDWF0
