--- a/basic-auth-demo/.env
+++ b/basic-auth-demo/.env
@@ -2,6 +2,6 @@ PORT=3000
 
 SESSION_SECRET = "PTWD is the best"
 
-CLOUD_NAME = djw7xkbip
-API_KEY = 522821966749615
-API_SECRET = FoUmvnSTqtaBf7DxyyNad6vDWF0
+CLOUD_NAME = add-your-cloud-name
+API_KEY = add-your-api-key
+API_SECRET = add-your-api-secret
